--- a/CoffeeCups.Droid/packages.config
+++ b/CoffeeCups.Droid/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile" version="0.5.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Analytics" version="0.5.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Azure.Mobile.Client" version="3.0.2" targetFramework="monoandroid60" />
   <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="3.0.2" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Crashes" version="0.5.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="MonoAndroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid60" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="MonoAndroid60" />
