--- a/CoffeeCups.UWP/project.json
+++ b/CoffeeCups.UWP/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
+    "Microsoft.Azure.Mobile.Analytics": "0.5.0",
     "Microsoft.Azure.Mobile.Client": "3.0.2",
     "Microsoft.Azure.Mobile.Client.SQLiteStore": "3.0.2",
+    "Microsoft.Azure.Mobile.Crashes": "0.5.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Newtonsoft.Json": "9.0.1",
     "Refractored.MvvmHelpers": "1.0.1",
